# Inferno

./: .gitignore  CMakeLists.txt
include/: DistSpMatCsr.hpp  Log.hpp  MPITypes.h  ProcessCube.hpp  SpMatCsr.hpp  Timer.hpp  common.h  inferno.hpp  utils.hpp
src/: main.cpp
tests/: .run_inferno.cpp.swp  run_inferno.cpp  run_inferno.cu
